Minor documentation updates to jupyter notebook.

--- a/demo/Gravity_AI_Container_Demo_MoviePlots.ipynb
+++ b/demo/Gravity_AI_Container_Demo_MoviePlots.ipynb
@@ -104,8 +104,8 @@
     }
    ],
    "source": [
-    "# Retrieve our \"agent\" text. This is what we will look for when matching.\n",
-    "# In this example, we are looking for sepsis diagnosis\n",
+    "# Retrieve our \"topic\" text. This is what we will look for when matching.\n",
+    "# In this example, we are looking for a movie with a plot similar to \"Back to the Future\"\n",
     "topicDB = db.get_topic(1)\n",
     "topicText = stringReplace(topicDB[0][0])\n",
     "print(topicText)"
@@ -580,10 +580,10 @@
     }
    ],
    "source": [
-    "# As we train agents we can begin to ascertain which scores indicate relevant results.\n",
+    "# As we train topics we can begin to ascertain which scores indicate relevant results.\n",
     "# We can call this the \"cutoff score\" and create an application that only shows users\n",
     "# docs that have a score higher than that cutoff score.\n",
-    "# Here, lets see all values higher than .9\n",
+    "# Here, lets see all values higher than .9999\n",
     "# This returns a smaller subset of docs for the user to review.\n",
     "resultsDF[resultsDF.similarityScore > .9999].sort_values(by='similarityScore', ascending=False)"
    ]
